--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -58,5 +58,6 @@
 
 	@media (max-width: $breakpoint-medium) {
 		top: .5em;
+		padding: 1.75em .75em;
 	}
 }
