--- a/src/assets/scss/header/_navigation.scss
+++ b/src/assets/scss/header/_navigation.scss
@@ -112,11 +112,16 @@
 			flex: 1 1 100%;
 			margin-bottom: 1rem;
 			margin-right: 0;
-			padding: 1rem 0;
+			
 			border-bottom: 1px solid lighten($color-body, 3); // The menu background has lighten so we're technically making this darker. Refer to .menu > background property above
 		
 			transition: .8s $transition-smooth;
 			transform: translateY(-10px);
+
+			a {
+				display: block;
+				padding: 1rem 0;
+			}
 		}
 
 		// Separate styling for the social icons
@@ -140,6 +145,7 @@
 			text-align: center;
 			margin-bottom: 0;
 			margin-top: .5em;
+			margin-bottom: .5em;
 			
 			transition: .6s $transition-smooth;
 			transform: translateY(-10px);
